[package]
name = "dodgeball_army_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_rapier3d = "0.23.0"
# bevy_rapier2d = { path = "../bevy_rapier/bevy_rapier2d" }
rand = "0.8.5"
smooth-bevy-cameras = "0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.12.0"
# default-features = false
features = ["bevy_text", "bevy_ui", "bevy_winit", "webgl2"]
