[package]
name = "megadodge_mayhem"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_rapier3d = { version = "0.23.0", features = ["simd-stable"] }
rand = "0.8.5"
smooth-bevy-cameras = "0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.12.0"
# default-features = false
features = ["bevy_text", "bevy_ui", "bevy_winit", "webgl2"]
